Fixed buttons to not overlap into bottom div
Added padding to parent div to prevent buttons from overlapping into bottom divs when parent div expands.

--- a/app/static/styles/upload.css
+++ b/app/static/styles/upload.css
@@ -1,6 +1,7 @@
 /* sets controlling div to relative position */
 .fileupload-control {
     position: relative;
+    padding-bottom: 5rem;
 }
 
 .carousel-control{
@@ -30,9 +31,9 @@
     width: 0px;
 }
 
-#email-summary{
-    padding-bottom: 5rem;
-}
+/*#email-summary{*/
+    /*padding-bottom: 5rem;*/
+/*}*/
 
 .upload-row-spacer {
     margin-top: 3rem;
