--- a/app/static/styles/view_extension.css
+++ b/app/static/styles/view_extension.css
@@ -1,6 +1,7 @@
 /* sets controlling div to relative position */
 .extension-control {
     position: relative;
+    padding-bottom: 5rem;
 }
 
 /* sets styles for the labels for the extension form */
